# wex

./: .bettercodehub.yml  .ci-ignore  .clang-format  .clang-tidy  .gersemirc  .gitignore  .gitmodules  .sonarcloud.properties  .travis.yml  CHANGELOG.md  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  FindwxWidgets.cmake  LICENSE.md  README.md  ROADMAP.md  appveyor.yml  branch.md  build-gen.ps1  build-gen.sh  build.bat  index.htm  make-new-version.bash  roadmap.md  sprint.md  wex.cmake
bindings/: CMakeLists.txt  README.md  wex.i
extension/: CMakeLists.txt  Doxyfile  doxy-deploy.sh  regen.sh
extension/data/: chdr.tpl  cht.txt  conf.elp  lexers.xml  lexers.xsl  macros.xml  menus.xml  vcs.xml  wex-lexers.xml  wex-lexers.xsl  wex-macros.xml  wex-menus.xml
extension/html/: annotated.html  classes.html  classwx_ex_address-members.html  classwx_ex_address.html  classwx_ex_address_range-members.html  classwx_ex_address_range.html  classwx_ex_app-members.html  classwx_ex_app.html  classwx_ex_cmd_line_parser-members.html  classwx_ex_cmd_line_parser.html  classwx_ex_column-members.html  classwx_ex_column.html  classwx_ex_command-members.html  classwx_ex_command.html  classwx_ex_command__inherit__graph.map  classwx_ex_command__inherit__graph.md5  classwx_ex_config_defaults-members.html  classwx_ex_config_defaults.html  classwx_ex_config_dialog-members.html  classwx_ex_config_dialog.html  classwx_ex_config_dialog__inherit__graph.map  classwx_ex_config_dialog__inherit__graph.md5  classwx_ex_config_item-members.html  classwx_ex_config_item.html  classwx_ex_dialog-members.html  classwx_ex_dialog.html  classwx_ex_dialog__inherit__graph.map  classwx_ex_dialog__inherit__graph.md5  classwx_ex_dir-members.html  classwx_ex_dir.html  classwx_ex_dir__inherit__graph.map  classwx_ex_dir__inherit__graph.md5  classwx_ex_dir_open_file-members.html  classwx_ex_dir_open_file.html  classwx_ex_dir_open_file__inherit__graph.map  classwx_ex_dir_open_file__inherit__graph.md5  classwx_ex_dir_tool-members.html  classwx_ex_dir_tool.html  classwx_ex_dir_tool__inherit__graph.map  classwx_ex_dir_tool__inherit__graph.md5  (+466 more)
extension/include/: otlv4.h
extension/interface/: intro.h
extension/locale/: CMakeLists.txt  po-sync.sh  wxex-fr.po  wxex-nl.po  wxex.pot  wxextension-fr.po  wxextension-nl.po  wxstd-xxx-nl.po
extension/sample/: CMakeLists.txt  app.cpp  app.h
extension/src/: CMakeLists.txt  address.cpp  addressrange.cpp  app.cpp  art.cpp  autocomplete.cpp  blame.cpp  cmdline.cpp  command.cpp  config.cpp  configdlg.cpp  configitem.cpp  control-data.cpp  ctags-entry.cpp  ctags-filter.cpp  ctags.cpp  debug.cpp  dialog.cpp  dir.cpp  eval.cpp  eval.h  ex-command.cpp  ex.cpp  file.cpp  filedlg.cpp  filehistory.cpp  filename.cpp  frame.cpp  frd.cpp  grid.cpp  header.cpp  hexmode.cpp  hexmodeline.cpp  hexmodeline.h  indicator.cpp  interruptable.cpp  item.cpp  lexer-props.cpp  lexer.cpp  lexers.cpp  (+49 more)
extension/test/: CMakeLists.txt  catch.hpp  test-configitem.h  test-item.h  test.cpp  test.h
extension/trunk/: Doxyfile  Makefile.env  extension.po  extension.sln  release.htm
src/: .clang-format  CMakeLists.txt
src/app/: CMakeLists.txt
src/app-test/: test-syncped.robot
src/common/: CMakeLists.txt  README.md  app.cpp  beautify.cpp  cmdline-imp.cpp  cmdline-imp.h  cmdline.cpp  debug-entry.cpp  debug.cpp  dir.cpp  file-history.cpp  frd.cpp  odbc.cpp  otl.cpp  path-match.cpp  process-imp.cpp  process.cpp  stream.cpp  tool.cpp  util.cpp  vcs-entry.cpp  vcs.cpp
src/core/: CMakeLists.txt  README.md  app-locale.cpp  app-locale.h  app.cpp  bind.cpp  blame.cpp  chrono.cpp  cmdline-imp.cpp  cmdline-imp.h  cmdline.cpp  config-imp.cpp  config-imp.h  config.cpp  dir-data.cpp  dir.cpp  file-imp.h  file-status.cpp  file.cpp  function-repeat.cpp  indicator.cpp  interruptible-imp.cpp  interruptible-imp.h  interruptible.cpp  lexer.cpp  lexers.cpp  listview.cpp  log-none.cpp  log.cpp  menu-command.cpp  path.cpp  presentation.cpp  printing.cpp  process.cpp  reflection.cpp  regex.cpp  sort.cpp  stat.cpp  statusbar-pane.cpp  style.cpp  (+7 more)
src/ctags/: CMakeLists.txt  README.md  ctags.cpp
src/data/: CMakeLists.txt  README.md  control.cpp  find.cpp  item.cpp  layout.cpp  listview.cpp  menu.cpp  notebook.cpp  stc.cpp  substitute.cpp  toolbar-item.cpp  wex-conf.elp.cmake  wex-lexers.xml  wex-macros.xml  wex-menus.xml  window.cpp
src/del/: CMakeLists.txt  README.md  accelerators.cpp  app.cpp  bind.cpp  blaming.cpp  blaming.h  dir.cpp  dirctrl.cpp  find-in-files.cpp  frame.cpp  listview-file.cpp  listview.cpp  stream.cpp  version-dialog.cpp
src/ex/: CMakeLists.txt  README.md  address.cpp  addressrange-mark.cpp  addressrange-mark.h  addressrange.cpp  block-lines.cpp  block-lines.h  command-parser-data.cpp  command-parser.cpp  commands-set.cpp  commands.cpp  ctags-entry.cpp  ctags.cpp  eval-imp.cpp  eval-imp.h  eval.cpp  eval.h  ex-stream-line.cpp  ex-stream-line.h  ex-stream.cpp  ex.cpp  global-env.cpp  global-env.h  macro-fsm.cpp  macro-fsm.h  macro-mode.cpp  macros.cpp  util.cpp  util.h  variable.cpp
src/factory/: CMakeLists.txt  README.md  beautify.cpp  bind.cpp  blame.cpp  control.cpp  data-to-std-in.cpp  data-to-std-in.h  data-to-stdin.cpp  data-to-stdin.h  ex-command.cpp  frame.cpp  frd.cpp  hexmode.cpp  indicator.cpp  lexer.cpp  lexers.cpp  link.cpp  listview.cpp  marker.cpp  path-lexer.cpp  presentation.cpp  printing.cpp  process-data.cpp  process-imp.cpp  process-imp.h  process.cpp  property.cpp  props.cpp  sort.cpp  stc-undo.cpp  stc.cpp  style.cpp  unified-diff-parser.cpp  unified-diff-parser.h  unified-diff.cpp  unified-diffs.cpp  util.cpp  vcs.cpp  window.cpp
src/lexers/: README.md  lex-rfw.cpp  lex-rfw.h
src/lib/: CMakeLists.txt  install-lib.sh
src/lib-test/: CMakeLists.txt  README.md  test.cpp  test.h
syncodbcquery/: CMakeLists.txt  app.cpp  app.h
syncped/: CMakeLists.txt  app.cpp  app.h  app.rc  app.xpm  defs.h  frame.cpp  frame.h  support.cpp  support.h  syncped.desktop  version.h
syncsocketserver/: CMakeLists.txt  app.cpp  app.h
test/: CMakeLists.txt  README.md  doctest.cpp  doctest.h  test.cpp  test.h
(+2852 files in other folders)
